# FTNODE

./: README.md  pyproject.toml  requirements.txt
examples/budworm/: best_model-20-20.pth  run_kfold-10-10-10-10.py  run_kfold-10-10-10.py  run_kfold-20-20-20-20.py  run_kfold-20-20-20-feat-bounds.py  run_kfold-20-20-node.py  run_kfold-20-20.py  run_kfold-50-50-node.py  run_kfold-50-50.py  train-model-20-20.ipynb  training_log-20-20-node.txt  training_log-20-20.txt  training_log-50-50-node.txt  training_log-50-50.txt
examples/hysteresis/: best_model-20-20-20.pth  best_model.pth  k-fold-cross-val-10-10-10-10-tight-f.ipynb  k-fold-cross-val-10-10-10-10.ipynb  k-fold-cross-val-10-10-10.ipynb  k-fold-cross-val-20-20-20-tight-f.ipynb  k-fold-cross-val-20-20-20.ipynb  k-fold-cross-val-20-20.ipynb
examples/mixing-tanks/: best_model-10-10-10.pth  best_model-20-20-20.pth  best_model.pth  k-folds-cross-val-10.ipynb  k-folds-cross-val.ipynb  train-model-10-10-10.ipynb  train-model-20-20-20.ipynb  train-model.ipynb
examples/toggle-switch/: best_model-10-10-10-10.pth  best_model-20-20-20.pth  best_model-50-50.pth  k-fold-cross-val-20-20-20.ipynb  run_kfold-10-10-10-10.py  run_kfold-10-10-10.py  run_kfold-20-20-20-alt-bounds.py  run_kfold-20-20-20.py  run_kfold-50-50.py  train-model-10-10-10-10.ipynb  train-model-20-20-20.ipynb  train-model-50-50.ipynb  training_log-10-10-10-10-reduction-none-seed-3.txt  training_log-10-10-10-10-reduction-none-seed.txt  training_log-10-10-10-10-reduction-none.txt  training_log-10-10-10-10.txt  training_log-10-10-10.txt  (+15 more)
ftnode/: utils.py
(+26 files in other folders)
